# pdf-parser

./: .env.example  .gcloudignore  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  cloudbuild.yaml  pyproject.toml  start_frontend.sh  start_server.sh
app/: __init__.py  config.py  logging_config.py  main.py
app/clients/: __init__.py  openai_client.py
app/models/: __init__.py  chunk.py  document.py  error.py  parsing.py  query.py  search.py
app/parsers/: __init__.py  adobe_pdf_parser.py  openai_pdf_parser.py  rag_anything_parser.py
app/processing/: __init__.py  chunker.py
app/retrieval/: __init__.py  bm25_index.py  hybrid_search.py  query_expansion.py  reranker.py  rrf.py
app/services/: __init__.py  document_service.py  query_service.py
app/storage/: __init__.py  file_storage.py  vector_store.py
data/vectordb/: .gitkeep
docs/: INTEGRATION_SUMMARY.md  MIGRATION_GUIDE.md  PARSER_IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  QUICKSTART_CHAT.md  RAG_ENHANCEMENTS_COMPLETION_SUMMARY.md  RAG_ENHANCEMENTS_README.md  RAG_FLOW_DIAGRAM.md  RAG_PIPELINE_GUIDE.md  RAG_SYSTEM_EXPLAINED.md  RAG_USAGE_EXAMPLES.md  ROZWIAZANIE_RETRIEVAL.md  SEMANTIC_CHUNKING_GPU_EXPLAINED.md  YOUR_SYSTEM_PERFORMANCE.md  explain_pipeline.md
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.css  App.js
scripts/: README.md  debug_vector_search.py  demo_final.py  demo_multimodal_rag.py  diagnose_pdf.py  inspect_chunks.py  list_documents.py  query_documents.py  quick_demo.py  simple_keyword_search.py  test_chunking.py  test_multimodal_features.py  test_simple_multimodal.py  test_warta_query.py  upload_legal_docs.py  upload_pdfs.py
scripts/analysis/: compare_expansion_methods.py  diagnose_enhancements.py
scripts/debug/: debug_adobe_content.py  debug_chromadb_content.py  debug_full_pipeline.py  debug_llm_context.py  debug_reranking.py  debug_rrf_fusion.py  debug_specific_query.py  debug_warta.py
scripts/tools/: extract_all_pages.py  extract_full_text.py  find_answers.py  search_payment_methods.py
scripts/utils/: check_chunks.py  (+1 more)
tests/: __init__.py  conftest.py  test_api_properties.py  test_chunker.py  test_chunker_properties.py  test_config.py  test_config_properties.py  test_document_service.py  test_document_service_properties.py  test_file_storage.py  test_models.py  test_models_properties.py  test_openai_client.py  test_parser_properties.py  test_query_service_properties.py  test_search_result_model.py  test_security.py  test_vector_store.py  test_vector_store_properties.py
(+28 files in other folders)
